# voice

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.bat  test_api.py  test_auth.py  test_real.py  vercel.json
frontend/: .env.production  index.html  vite.config.js
frontend/public/: 404.html
frontend/src/: AdminDashboard.jsx  App.jsx  AuthContext.jsx  ClientDashboard.jsx  Login.jsx  ProgressPanel.jsx  RadarChart.jsx  Register.jsx  ResultsPanel.jsx  UploadPanel.jsx  api.js  index.css  main.jsx
src/: main.py
src/analysis/asr/: circuit_breaker.py  fallback.py  transcriber.py
src/analysis/audio_dsp/: preprocessor.py  vad.py
src/analysis/nlp/: clarity.py  delivery.py  filler_words.py  language_quality.py  pauses.py  punctuation.py  tone.py
src/analysis/scoring/: composite.py  generator.py  normalizer.py  report_builder.py  weights.py
src/api/: auth.py  routes.py  schemas.py
src/core/: celery_app.py  config.py  logger.py
src/db/: mongodb.py
src/workers/: tasks.py
templates/: report.html
